--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -58,7 +58,7 @@ redis> get foo
 
 ### Next Step
 
-- [Connect to Redis database using RedisInsight](/explore/redisinsight)
+- [Connect to a Redis database using RedisInsight](/explore/redisinsight)
 - [Develop with Java and Redis](/develop/java)
 - [High availability with Redis Sentinel](https://redis.io/docs/manual/sentinel/)
 - [Develop with Python and Redis](/develop/python)
