--- a/docs/create/from-source/index-from-source.mdx
+++ b/docs/create/from-source/index-from-source.mdx
@@ -56,7 +56,7 @@ redis> get foo
 `redis.conf` is the Redis configuration file, used to configure the behavior of the Redis Server.  For more information on the available configuration options, check out the [documentation on redis.io](https://redis.io/docs/manual/config/).
 
 
-### Next Step
+### Next Steps
 
 - [Connect to a Redis database using RedisInsight](/explore/redisinsight)
 - [Develop with Java and Redis](/develop/java)
