--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -24,7 +24,7 @@ Heroku recognizes an app as being written in Go by the existence of a `go.mod` f
 ### Step 1. Create a Redis Enterprise Cloud Database
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free).
-Creating a heroku account is free of cost.
+Creating a Heroku account is free of charge.
 
 :::info TIP
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
