--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -40,7 +40,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 ### Step 2. Create a Heroku account
 
-If you are using Heroku for the first time, visit Heroku website and create your new Heroku account [through this link](https://signup.heroku.com/login).
+If you are using Heroku for the first time, visit the Heroku website and create your new Heroku account [through this link](https://signup.heroku.com/login).
 
 ![heroku](create_heroku.png)
 
