--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -47,7 +47,7 @@ If you are using Heroku for the first time, visit the Heroku website and create 
 
 ### Step 3. Install the Heroku CLI on your system
 
-The Heroku Command Line Interface (CLI) lets you create and manage Heroku apps directly from the terminal. It's an essential part of using Heroku. In order to install Heroku CLI, run the below command:
+The Heroku Command Line Interface (CLI) lets you create and manage Heroku apps directly from the terminal. It's an essential part of using Heroku. In order to install Heroku CLI, run the following command:
 
    ```macos
     brew install heroku
