--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -55,7 +55,7 @@ The Heroku Command Line Interface (CLI) lets you create and manage Heroku apps d
 
 ### Step 4. Login to Heroku
 
-Use the following Heroku Command Line interface to login to Heroku dashboard:
+Use the following Heroku Command Line commands to login to Heroku dashboard:
 
 
    ```bash
