--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -79,7 +79,7 @@ First you will need to clone the GitHub repository to configure it as a local re
    ```
 
 
-The `basic-redis-chat-demo-go` is the name of the project directory.
+`basic-redis-chat-demo-go` is the name of the project directory.
 Run the commands below to get a functioning Git repository that contains a simple application as well as a `app.json` file.
 
 
