--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -39,7 +39,7 @@ You can use redis client command line to quickly verify the connection to the Re
 
 ### Step 2. Create a Heroku account
 
-If you are using Heroku platform for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login).
+If you are using the Heroku platform for the first time, create your new Heroku account [through this link](https://signup.heroku.com/login).
 You can refer to [Heroku documentation](https://devcenter.heroku.com/categories/reference)
 
 ![heroku](create_heroku.png)
