--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -35,7 +35,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database. Once you create the database, you will be provisioned with a unique database endpoint URL, port and password. Save these for future reference.
 
-You can use redis client command line to quickly verify the connection to the Redis instance URL and access the database.
+You can use the Redis CLI to quickly verify the connection to the Redis instance URL and access the database.
 
 ### Step 2. Create a Heroku account
 
