--- a/docs/create/heroku/herokupython/index-herokupython.mdx
+++ b/docs/create/heroku/herokupython/index-herokupython.mdx
@@ -47,7 +47,7 @@ You can refer to [Heroku documentation](https://devcenter.heroku.com/categories/
 
 ### Step 3. Install Heroku CLI on your system
 
-Run the following command to install heroku in your system.
+Run the following command to install the Heroku CLI on your system.
 
 
    ```macos
