--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -139,7 +139,7 @@ If your app doesn point to the right repository, you can manually add it:
 ```
 
 
-### Step 8. Accessing the Heroku app
+### Step 8. Accessing the app
 
 Open [https://powerful-fortress-83061.herokuapp.com/](https://powerful-fortress-83061.herokuapp.com/) to see your application.
 
