--- a/docs/operate/redis-at-scale/observability/introduction/index-introduction.mdx
+++ b/docs/operate/redis-at-scale/observability/introduction/index-introduction.mdx
@@ -8,4 +8,26 @@ isEditable: false
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-<iframe width="586" height="330" src="https://www.youtube.com/embed/hO1AGE3I_bU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div align="center">
+<iframe width="896" height="509" src="https://www.youtube.com/embed/hO1AGE3I_bU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<br />
+<br />
+<p>The last thing you want to do after successfully deploying and scaling Redis is to be stuck working on the weekend because performance is down or the service is unavailable!</p>
+
+If you're running a managed service like Redis Cloud, you won't have to worry about these questions as much. But even then, it's still worthwhile to know about certain key Redis metrics.
+
+Some of the question you always want to be able to answer include:
+- Is Redis up and running right now?
+- Where is my Redis capacity at?
+- Is Redis accessible at this moment?
+- Is Redis performing the way we expect?
+- When failures occur… what exactly happened to Redis?
+
+Then of course you must ask... 
+- How can I find this out ahead of time?
+
+Let's dig into these questions and more as we look into observability with Redis.
+
+
+
