changed Redis Live page to be a calendar of streaming events

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -5,20 +5,24 @@ sidebar_label: Redis Live
 slug: /community/redis-live/
 ---
 
-Redis Live hosts a variety of live-streamed content. [Sign up](https://meetups.redis.com/redis-live/) to get notified of new shows, and watch live on [YouTube](https://www.youtube.com/redisinc) or [Twitch](https://www.twitch.tv/redis). Do I need to tell you to like and subscribe?
+Redis Live hosts a variety of live-streamed content on [Twitch](https://www.twitch.tv/redisinc) and occasioanlly [YouTube](https://www.youtube.com/redisinc). Follow us to get notified when we go live. And, you know, like and subscribe.
 
-### Redis Monthly Live
+### Upcoming Events
 
-Every month, *Redis Monthly Live* hosts speakers from around the world and we talk about everything Redis. Watch for the *Redis Command of the Month* with Justin Castilla!
+Check out these scheduled streams:
 
-<div class="text--center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/P7H1H-Zj5oU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+| Date              | Time        | Show
+|-------------------|-------------|:-----
+| Friday, June 10   | 3:00 PM UTC | Working with Redis Data Structures
+| Friday, June 10   | 6:00 PM UTC | Graph, Graph, and Graph: Attorneys at Law
+| Thursday, June 16 | 3:00 PM UTC | Counting Things At Scale
+| Friday, June 17   | 6:00 PM UTC | Graph, Graph, and Graph: Attorneys at Law
+| Friday, June 30   | 6:00 PM UTC | Graph, Graph, and Graph: Attorneys at Law
 
-### Redis in the Cloud
+### Recurring Streams
 
-*Redis in the Cloud* is a monthly show that highlights the numerous ways to leverage Redis Enterprise to your cloud native data. Solution Architects will walk you through live demos showcasing the many amazing features of Redis Enterprise.
+Sometimes we're on the road speaking at in person events instead of livestreaming. But when we're not, here's our schedule:
 
-<div class="text--center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/zw7vu1vaVwg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+| Day    | Time       | Show
+|--------|------------|:-----
+| Friday | 2:00 PM ET | Web, Whimsy, and Redis Stack: Random Projects with Guy (and sometimes a friend)
