added description to windows store step

--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -3,7 +3,7 @@ id: index-windows
 title: How to Install Redis on Windows  
 sidebar_label: Redis on Windows
 slug: /create/windows
-authors: [ajeet]
+authors: [ajeet, dibrinsofor]
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -33,6 +33,7 @@ Reboot Windows after making the change — note that you only need to do this on
  ```powershell
   start ms-windows-store:
  ```
+Upon opening the Windows Store, use the search tool to find entries related to "Linux" and install your preferred distribution (or version). Please note the rest of this tutorial is tailored to Ubuntu.
 
 ### Step 3: Install Redis server
 
