--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -5,24 +5,43 @@ sidebar_label: Redis Live
 slug: /community/redis-live/
 ---
 
-Redis Live hosts a variety of live-streamed content on [Twitch](https://www.twitch.tv/redisinc) and occasioanlly [YouTube](https://www.youtube.com/redisinc). Follow us to get notified when we go live. And, you know, like and subscribe.
+Redis Live hosts a variety of live-streamed content on [Twitch](https://www.twitch.tv/redisinc) and occasionally [YouTube](https://www.youtube.com/redisinc). Follow us to get notified when we go live. And, you know, like and subscribe.
 
-### Upcoming Events
+### Upcoming Streams
 
-Check out these scheduled streams:
+Check out these upcoming streams:
 
-| Date              | Time        | Show
-|-------------------|-------------|:-----
-| Friday, June 10   | 3:00 PM UTC | Working with Redis Data Structures
-| Friday, June 10   | 6:00 PM UTC | Graph, Graph, and Graph: Attorneys at Law
-| Thursday, June 16 | 3:00 PM UTC | Counting Things At Scale
-| Friday, June 17   | 6:00 PM UTC | Graph, Graph, and Graph: Attorneys at Law
-| Friday, June 30   | 6:00 PM UTC | Graph, Graph, and Graph: Attorneys at Law
+| Date               | Time         | Streamers                                        | Show                                                  |
+|:------------------:|:------------:|:-------------------------------------------------|:------------------------------------------------------|
+| Friday, June 3     | 6:00 PM UTC  | [Guy Royse][guy]                                 | Tracking Aircraft with Redis + Software-Defined Radio |
+| Friday, June 10    | 3:00 PM UTC  | [Justin Castilla][justin], [Suze Shardlow][suze] | Working with Redis Data Structures                    |
+| Friday, June 10    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
+| Thursday, June 16  | 3:00 PM UTC  | [Simon Prickett][simon], [Suze Shardlow][suze]   | Counting Things At Scale with Redis                   |
+| Friday, June 17    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
+| Friday, June 30    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
+| Wednesday, June 29 | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET   |
+| Friday, June 30    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
+| Wednesday, July 6  | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET   |
+| Friday, July 8     | 6:00 PM UTC  | [Brain Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
+| Wednesday, July 13 | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET   |
+| Friday, July 15    | 6:00 PM UTC  | [Brain Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
+| Friday, July 22    | 6:00 PM UTC  | [Brain Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
+
 
 ### Recurring Streams
 
-Sometimes we're on the road speaking at in person events instead of livestreaming. But when we're not, here's our schedule:
+Sometimes we're on the road speaking at in-person events or enjoying a well deserved vacation. But when we're not, here's our weekly streaming schedule:
 
-| Day    | Time       | Show
-|--------|------------|:-----
-| Friday | 2:00 PM ET | Web, Whimsy, and Redis Stack: Random Projects with Guy (and sometimes a friend)
+| Day       | Time        | Streamers              | Show                                                   |
+|:---------:|:-----------:|:-----------------------|:-------------------------------------------------------|
+| Wednesday | 2:00 PM ET  | [Steve Lorello][steve] | Coding with Steve                                      |
+| Friday    | 2:00 PM ET  | [Guy Royse][guy]       | Web, Whimsy, and Redis Stack: Random Projects with Guy |
+
+<!-- Links -->
+
+[brian]: https://twitter.com/bsbodden
+[guy]: https://twitter.com/guyroyse
+[justin]: https://twitter.com/JustCastilla
+[simon]: https://twitter.com/simon_prickett
+[steve]: https://twitter.com/slorello
+[suze]: https://twitter.com/SuzeShardlow
