--- a/docs/operate/redis-at-scale/persistence-and-durability/introduction/index-introduction.mdx
+++ b/docs/operate/redis-at-scale/persistence-and-durability/introduction/index-introduction.mdx
@@ -13,7 +13,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 </div>
 <br />
 <br />
-<p>Hello! Congrats on completing section 1. Section 2 is a bit shorter but contains some important information on persistence and durability.</p>
+<p>Hello! Congrats on completing Section 1. Section 2 is a bit shorter but contains some important information on persistence and durability.</p>
 
 As I am sure you know, Redis serves all data directly from memory. But Redis is also capable of persisting data to disk. Persistence preserves data in the event of a server restart. 
 
