--- a/docs/operate/redis-at-scale/observability/introduction/index-introduction.mdx
+++ b/docs/operate/redis-at-scale/observability/introduction/index-introduction.mdx
@@ -25,7 +25,7 @@ Some of the question you always want to be able to answer include:
 - When failures occur… what exactly happened to Redis?
 
 Then of course you must ask... 
-- How can I find this out ahead of time?
+- <strong>How can I find this out ahead of time?</strong>
 
 Let's dig into these questions and more as we look into observability with Redis.
 
