removed duplicated event, correct spelling of Brian's name

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -2,7 +2,7 @@
 id: index-redis-live
 title: Redis Live
 sidebar_label: Redis Live
-slug: /community/redis-live/
+slug: /redis-live/
 isEditable: false
 ---
 
@@ -19,14 +19,13 @@ Check out these upcoming streams:
 | Friday, June 10    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
 | Thursday, June 16  | 3:00 PM UTC  | [Simon Prickett][simon], [Suze Shardlow][suze]   | Counting Things At Scale with Redis                   |
 | Friday, June 17    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
-| Friday, June 30    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
 | Wednesday, June 29 | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET   |
 | Friday, June 30    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
 | Wednesday, July 6  | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET   |
-| Friday, July 8     | 6:00 PM UTC  | [Brain Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
+| Friday, July 8     | 6:00 PM UTC  | [Brian Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
 | Wednesday, July 13 | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET   |
-| Friday, July 15    | 6:00 PM UTC  | [Brain Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
-| Friday, July 22    | 6:00 PM UTC  | [Brain Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
+| Friday, July 15    | 6:00 PM UTC  | [Brian Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
+| Friday, July 22    | 6:00 PM UTC  | [Brian Sam-Bodden][brian], [Guy Royse][guy]      | Extending Redis with Rust                             |
 
 
 ### Recurring Streams
