--- a/docs/operate/redis-at-scale/persistence-and-durability/persistence-options-in-redis/index-persistence-options-in-redis.mdx
+++ b/docs/operate/redis-at-scale/persistence-and-durability/persistence-options-in-redis/index-persistence-options-in-redis.mdx
@@ -20,7 +20,7 @@ When a snapshot is created, the entire point-in-time view of the dataset is writ
 
 Creating a .rdb file requires a lot of disk I/O. If performed in the main Redis process, this would reduce the server’s performance. That’s why this work is done by a forked child process. But even forking can be time-consuming if the dataset is large. This may result in decreased performance or in Redis failing to serve clients for a few milliseconds or even up to a second for very large datasets. Understanding this should help you decide whether this solution makes sense for your requirements.
 
-You can configure the name and location of the .rdb file with the <strong>dbfilename</strong> and <strong>dir</strong> configuration directives, either through the <strong>redis.conf</strong> file, or through the redis-cli as explained in [Section 1 Unit 2](http://localhost:3000/operate/redis-at-scale/talking-to-redis/configuring-a-redis-server). And of course you can configure how often you want to create a snapshot. Here’s an excerpt from the redis.conf file showing the default values.
+You can configure the name and location of the .rdb file with the <strong>dbfilename</strong> and <strong>dir</strong> configuration directives, either through the <strong>redis.conf</strong> file, or through the redis-cli as explained in [Section 1 Unit 2](https://developer.redis.com//operate/redis-at-scale/talking-to-redis/configuring-a-redis-server). And of course you can configure how often you want to create a snapshot. Here’s an excerpt from the redis.conf file showing the default values.
 
 As an example, this configuration will make Redis automatically dump the dataset to disk every 60 seconds if at least 1000 keys changed in that period. While snapshotting is a great strategy for the use cases explained above, it leaves a huge possibility for data loss. You can configure snapshots to run every few minutes, or after X writes against the database, but if the server crashes you lose all the writes since the last snapshot was taken. In many use cases, that kind of data loss can be acceptable, but in many others it is absolutely not. For all of those other use cases Redis offers the AOF persistence option.
 
