--- a/docs/operate/redis-at-scale/scalability/clustering-in-redis/index-scalability.mdx
+++ b/docs/operate/redis-at-scale/scalability/clustering-in-redis/index-scalability.mdx
@@ -14,7 +14,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 </div>
 <br />
 <br />
-<p>Before we jump into the details, let's first address the elephant in the room: DBaaS offerings, or "database-as-a-service" in the cloud. No doubt, it's useful to know how Redis scales and how you might deploy it. But deploying and maintaining a Redis cluster is a fair amount of work. So if you don't want to deploy and manage Redis yourself, then consider signing up for a Redis Cloud, our managed service, and let us do the scaling for you. Of course, that route is not for everyone. And as I said, there's a lot to learn here, so let's dive in.</p>
+<p>Before we jump into the details, let's first address the elephant in the room: DBaaS offerings, or "database-as-a-service" in the cloud. No doubt, it's useful to know how Redis scales and how you might deploy it. But deploying and maintaining a Redis cluster is a fair amount of work. So if you don't want to deploy and manage Redis yourself, then consider signing up for Redis Cloud, our managed service, and let us do the scaling for you. Of course, that route is not for everyone. And as I said, there's a lot to learn here, so let's dive in.</p>
 
 We'll start with scalability. Here's one definition:
 > “Scalability is the property of a system to handle a growing amount of work by adding resources to the system.”  
