changed todays streaming plan

--- a/docs/get-involved/redis-live/index-redis-live.mdx
+++ b/docs/get-involved/redis-live/index-redis-live.mdx
@@ -16,7 +16,7 @@ Check out these upcoming streams:
 |:------------------:|:------------:|:-------------------------------------------------|:------------------------------------------------------|
 | Friday, June 3     | 6:00 PM UTC  | [Guy Royse][guy]                                 | Tracking Aircraft with Redis + Software-Defined Radio |
 | Friday, June 10    | 3:00 PM UTC  | [Justin Castilla][justin], [Suze Shardlow][suze] | Working with Redis Data Structures                    |
-| Friday, June 10    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
+| Friday, June 10    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Working on Redis OM for Node.js                       |
 | Thursday, June 16  | 3:00 PM UTC  | [Simon Prickett][simon], [Suze Shardlow][suze]   | Counting Things At Scale with Redis                   |
 | Friday, June 17    | 6:00 PM UTC  | [Guy Royse][guy]                                 | Graph, Graph, and Graph: Attorneys at Law             |
 | Wednesday, June 29 | 6:00 PM UTC  | [Steve Lorello][steve]                           | Real-Time Stock Analytics with Redis Stack and .NET   |
