updating to latest docusaurus and dependencies

--- a/docs/create/index-create.mdx
+++ b/docs/create/index-create.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-create
-title: Create a Redis Database - Quick Starts 
-sidebar_label: Overview - All Quick Starts 
+title: Create a Redis Database - Quick Starts
+sidebar_label: Overview - All Quick Starts
 slug: /create
 ---
 
@@ -12,8 +12,8 @@ The following quick starts shows various ways of how to get started and create a
 
 
 
-<div class="row">
-  <div class="col">
+<div className="row">
+  <div className="col">
      <RedisCard
         title="Redis Stack"
         description="Create database using Redis Stack"
@@ -22,7 +22,7 @@ The following quick starts shows various ways of how to get started and create a
  </div>
 
 
-  <div class="col">
+  <div className="col">
      <RedisCard
         title="Redis Functions"
         description="Getting started with Redis Functions"
@@ -32,37 +32,37 @@ The following quick starts shows various ways of how to get started and create a
 
 
 
- <div class="col">
-     <RedisCard 
-        title="Redis Enterprise Cloud" 
+ <div className="col">
+     <RedisCard
+        title="Redis Enterprise Cloud"
         imgPath="recloud.png"
-        description="Create database using Redis Enterprise Cloud" 
+        description="Create database using Redis Enterprise Cloud"
         preview="recloud.png"
         page="/create/rediscloud"
         />
  </div>
 
 
- <div class="col">
-    <RedisCard 
-        title="Redis on Heroku" 
-        description="Create Redis database on Heroku" 
+ <div className="col">
+    <RedisCard
+        title="Redis on Heroku"
+        description="Create Redis database on Heroku"
         page="/create/heroku"
         />
  </div>
 </div>
 
-<div class="row">
- <div class="col">
-    <RedisCard 
-        title="Redis on Azure Cache" 
-        description="Create Redis database on Azure Cache" 
+<div className="row">
+ <div className="col">
+    <RedisCard
+        title="Redis on Azure Cache"
+        description="Create Redis database on Azure Cache"
         page="/create/azure"
         />
  </div>
 
 
- <div class="col">
+ <div className="col">
      <RedisCard
         title="Redis on Google Cloud"
         imgPath="recloud.png"
@@ -73,7 +73,7 @@ The following quick starts shows various ways of how to get started and create a
 </div>
 
 
- <div class="col">
+ <div className="col">
     <RedisCard
         title="Redis on AWS"
         description="Create Redis database on AWS"
@@ -82,18 +82,18 @@ The following quick starts shows various ways of how to get started and create a
  </div>
 </div>
 
-<div class="row">
+<div className="row">
 
- <div class="col">
+ <div className="col">
     <RedisCard
         title="Redis on Docker"
-        description="Create Redis database on Docker"                   
+        description="Create Redis database on Docker"
         page="/create/docker"
         />
  </div>
 
 
- <div class="col">
+ <div className="col">
      <RedisCard
         title="Redis on Kubernetes"
         imgPath="recloud.png"
@@ -104,18 +104,18 @@ The following quick starts shows various ways of how to get started and create a
 </div>
 
 
- <div class="col">
+ <div className="col">
     <RedisCard
         title="Redis from Source"
         description="Create Redis database from Source"
         page="/create/from-source"
-        />   
+        />
   </div>
 </div>
 
-<div class="row">
+<div className="row">
 
-   <div class="col">
+   <div className="col">
     <RedisCard
         title="Redis on Mac"
         description="Create Redis database on Mac using Homebrew"
@@ -126,6 +126,3 @@ The following quick starts shows various ways of how to get started and create a
 
 
 </div>
-
-
-
