--- a/docs/create/redis-stack/index-redis-stack.mdx
+++ b/docs/create/redis-stack/index-redis-stack.mdx
@@ -376,9 +376,9 @@ Here’s how to set a retention policy for RedisTimeSeries:
 
 
 
-<div class="row text--center">
+<div className="row text--center">
 
-<div class="col ">
+<div className="col ">
 <div className="ri-container">
 
 #### Storing and querying JSON documents
@@ -390,7 +390,7 @@ Here’s how to set a retention policy for RedisTimeSeries:
 </div>
 </div>
 
-<div class="col">
+<div className="col">
 <div className="ri-container">
 
 #### Full-text search
@@ -406,9 +406,9 @@ Learn how to [perform full-text search](/howtos/redisearch/) using Redis Stack.
 </div>
 
 
-<div class="row text--center">
+<div className="row text--center">
 
-<div class="col ">
+<div className="col ">
 <div className="ri-container">
 
 #### Probabilistic data structures
@@ -420,7 +420,7 @@ Follow this tutorial to learn [how to implement low latency and compact Probabil
 </div>
 </div>
 
-<div class="col">
+<div className="col">
 <div className="ri-container">
 
 #### Storing and querying time series data
