--- a/docs/tools/index-tools.mdx
+++ b/docs/tools/index-tools.mdx
@@ -6,6 +6,6 @@ hide_table_of_contents: true
 slug: /tools/
 custom_edit_url:
 ---
-import Languages from '@theme/Languages';
+import Languages from '@site/src/theme/Languages';
 
 <Languages />
