fixing duplicate links

--- a/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window.mdx
+++ b/docs/develop/java/spring/rate-limiting/fixed-window/index-fixed-window.mdx
@@ -1,5 +1,5 @@
 ---
-id: index-fixed-window
+id: index-spring-fixed-window
 title: How to Implement Fixed Window Rate Limiting using Redis
 sidebar_label: Overview
 slug: /develop/java/spring/rate-limiting/fixed-window
@@ -53,4 +53,3 @@ into out Spring Reactive implementation:
 5. Otherwise, fulfill the request.
 
 Ok, now that we know the basic recipe, let's implement it in [Spring](/develop/java/spring/rate-limiting/fixed-window/reactive)
-
