--- a/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
+++ b/docs/develop/java/spring/rate-limiting/getting-started/getting-started.mdx
@@ -1,8 +1,8 @@
 ---
-id: index-rate-limiting
+id: index-java-rate-limiting
 title: How to implement Rate Limiting in Spring Applications using Redis
 sidebar_label: How to implement Rate Limiting in Spring Applications using Redis
-slug: /develop/java/spring/rate-limiting
+slug: /develop/java/spring/rate-limiting/getting-started
 authors: [bsb]
 ---
 import Tabs from '@theme/Tabs';
