--- a/docs/develop/dotnet/aspnetcore/rate-limiting/fixed-window/fixed-window.mdx
+++ b/docs/develop/dotnet/aspnetcore/rate-limiting/fixed-window/fixed-window.mdx
@@ -1,5 +1,5 @@
 ---
-id: index-rate-limiting
+id: index-dotnet-rate-limiting
 title: How to implement a Fixed Window Rate Limiting app using ASP.NET Core & Redis
 sidebar_label: Fixed Window Rate Limiting app using ASP.NET
 slug: /develop/dotnet/aspnetcore/rate-limiting/fixed-window
@@ -30,7 +30,7 @@ In your terminal, navigate to where you want the app to live and run:
  dotnet new webapi -n FixedRateLimiter --no-https
 ```
 
-Change directory to `FixedRateLimiter` and run the below command: 
+Change directory to `FixedRateLimiter` and run the below command:
 
 `dotnet add package StackExchange.Redis`
 
@@ -43,7 +43,7 @@ Open the `FixedRateLimiter.csproj` file in Visual Studio or Rider (or open the f
     [Route("api/[controller]")]
     public class RateLimitedController : ControllerBase
     {
-        
+
     }
  }
 ```
@@ -102,7 +102,7 @@ We are going to build a Fixed Window Rate limiting script. A fixed Window Rate L
 4. If the current value of the key is less than or equal to the max requests allowed, increment the key and return false (not rate limited)
 5. If the current value of the key is greater than or equal to the max number of requests allowed, return true (rate limited)
 
-The issue we need to contend with here is that this rate-limiting requires atomicity for all our commands (e.g. between when we get and increment the key we don't want anyone coming in and hitting it). Because of this, we will run everything on the server through a [Lua script](https://redis.io/commands/eval). Now there are two ways to write this Lua script. The traditional way, where you drive everything off of keys and arguments, the following 
+The issue we need to contend with here is that this rate-limiting requires atomicity for all our commands (e.g. between when we get and increment the key we don't want anyone coming in and hitting it). Because of this, we will run everything on the server through a [Lua script](https://redis.io/commands/eval). Now there are two ways to write this Lua script. The traditional way, where you drive everything off of keys and arguments, the following
 
 ``` sh
  local key = KEYS[1]
@@ -141,7 +141,7 @@ To run a Lua script with StackExchange.Redis, you need to prepare a script and r
      {
          public static LuaScript RateLimitScript => LuaScript.Prepare(RATE_LIMITER);
 
-        private const string RATE_LIMITER = @"            
+        private const string RATE_LIMITER = @"
             local requests = redis.call('INCR',@key)
             redis.call('EXPIRE', @key, @expiry)
             if requests < tonumber(@maxRequests) then
@@ -149,7 +149,7 @@ To run a Lua script with StackExchange.Redis, you need to prepare a script and r
             else
                 return 1
             end
-            "; 
+            ";
     }
  }
 ```
@@ -181,7 +181,7 @@ Our `Simple` route's code should look like this:
     var key = $"{Request.Path.Value}:{apiKey}:{DateTime.UtcNow:hh:mm}";
     var res = await _db.ScriptEvaluateAsync(script, new {key = new RedisKey(key), expiry = 60, maxRequests = 10});
     if ((int) res == 1)
-        return new StatusCodeResult(429); 
+        return new StatusCodeResult(429);
     return new JsonResult(new {key});
  }
 ```
@@ -231,4 +231,3 @@ You will see some of your requests return a `200`, and at least one request retu
 <div>
 <a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
 </div>
-
